--- a/style.css
+++ b/style.css
@@ -60,9 +60,8 @@ a {
   text-decoration: none;
   color: black;
 }
-.center {
+.centerpic {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
- 
