--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
   font-family: "arial";
   /* margin: 2em; */
   margin: 45px;
-  background-image: linear-gradient(to right, #C2FFD8,
-    #465EFB);
+  background-image: linear-gradient(to right, #2AFADF,
+    #4C83FF);
 }
 #myname {
   text-align: center;
