--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   color: black;
 }
 body {
-  font-family: "arial";
+  font-family: "calibri";
   /* margin: 2em; */
   margin: 45px;
   /*background-image: linear-gradient(to right, #2AFADF,
@@ -41,9 +41,11 @@ body {
   font-size: 45px;
   color: black;
   text-decoration: none;
+  font-family: "calibri";
 }
 #p1 {
   color: black;
+  font-family: "calibri";
 }
 .about {
   color: black;
@@ -65,4 +67,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   text-align:center;
+}
+* {
+  font-family: "calibri";
 }
